# Gigantua

./: CMakeLists.txt
.PVS-Studio/: depend_info.json
Gigantua/: CMakeLists.txt
